fix: Refactor scrollbar styles and update layout in Menu component

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .scrollbar-hide {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: 0; /* Firefox */
-  }
+* {
+  /* scrollbar-width: thin;  */
+  /* scrollbar-color: var(--foreground) var(--background); */
+}
 
-  .scrollbar-hide::-webkit-scrollbar {
-    display: none; /* Chrome, Safari and Opera */
-  }
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: 0; /* Firefox */
+  overflow: -moz-scrollbars-none; /* Firefox */
+  -webkit-overflow-scrolling: touch; /* iOS Safari */
+  overflow: hidden; /* Hide scrollbar for Chrome, Safari and Opera */
+  overflow: overlay; /* Hide scrollbar for Chrome, Safari and Opera */
+  overflow-y: scroll; /* Show scrollbar for Chrome, Safari and Opera */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+
 }
 
 @layer base {
